--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
         </div>
       </div>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <span
+        ><img src="../images/up-arrow copy.png" width="20px" height="20px"
+      /></span>
+    </button>
     <div class="section">
       <div id="works-grid" class="w-layout-grid works-grid">
         <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-56179d35">
@@ -287,6 +292,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="../js/scrolltotop.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
