Added lazy loading to 3rdretail project images

--- a/work/3rdretailafrica.html
+++ b/work/3rdretailafrica.html
@@ -243,6 +243,7 @@
             <div class="column w-col w-col-6">
               <img
                 src="../images/persona1.png"
+                loading="lazy"
                 srcset="
                   ../images/persona1-p-500.png   500w,
                   ../images/persona1-p-800.png   800w,
@@ -259,6 +260,7 @@
             <div class="column-2 w-col w-col-6">
               <img
                 src="../images/persona2.png"
+                loading="lazy"
                 srcset="
                   ../images/persona2-p-500.png   500w,
                   ../images/persona2-p-800.png   800w,
@@ -290,7 +292,12 @@
           </p>
         </div>
         <div>
-          <img src="../images/3rdretailWireframe.jpg" alt="" class="image-11" />
+          <img
+            src="../images/3rdretailWireframe.jpg"
+            loading="lazy"
+            alt=""
+            class="image-11"
+          />
         </div>
       </div>
     </div>
@@ -356,6 +363,7 @@
         </div>
         <img
           src="../images/High-Fidelity-1.jpg"
+          loading="lazy"
           srcset="
             ../images/High-Fidelity-1-p-500.jpg   500w,
             ../images/High-Fidelity-1-p-800.jpg   800w,
