Added Minimalistic to homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 22 2022 06:33:24 GMT+0000 (Coordinated Universal Time)  -->
+
 <html
   data-wf-page="61eaa35a2c72b87856179d35"
   data-wf-site="61eaa35a2c72b884de179d31"
@@ -116,7 +115,7 @@
             ><span class="text-span">Tobechukwu,</span>
           </div>
           <h1 class="heading-jumbo">
-            a product designer that create and design user center solution that
+            a product designer that create and design mininmalistic user center solution that
             are Usable, Equitable, Useful, and Enjoyable.
           </h1>
         </div>
