updated portfolio homepage

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             ><span class="text-span">Tobechukwu,</span>
           </div>
           <h1 class="heading-jumbo">
-            a product designer that create and design mininmalistic user center solution that
-            are Usable, Equitable, Useful, and Enjoyable.
+            a product designer that create and design mininmalistic user center
+            solution that are Usable, Equitable, Useful, and Enjoyable.
           </h1>
         </div>
       </div>
@@ -131,14 +131,82 @@
     <div class="section">
       <div id="works-grid" class="w-layout-grid works-grid">
         <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-56179d35">
+          <a href="#" class="work-image cc-work-1 w-inline-block"></a>
+          <div class="work-description">
+            <h1>
+              <a href="#" class="project-name-link">Tilo Tailor App<br /></a>
+            </h1>
+            <p>
+              Tilo Tailor App is an ecommerce mobile project from my google UX
+              certification course.
+              <span id="naiya-case_study">Case Study Coming Soon</span>
+            </p>
+          </div>
+        </div>
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-56179d35">
+          <a href="#" class="work-image cc-work-2 w-inline-block"></a>
+          <div class="work-description">
+            <h1>
+              <a href="#" class="project-name-link"
+                >Hospital Management System (HMS)</a
+              >
+            </h1>
+            <p>
+              Medteqpro is a HMS that features a complete department found in a
+              hospital space. it has a doctor, nurse, pharmancy, lab and
+              anntenatal dashborads.
+              <span id="naiya-case_study">Case Study Coming Soon</span>
+            </p>
+          </div>
+        </div>
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-56179d35">
+          <a href="#" class="work-image cc-work-4 w-inline-block"></a>
+          <div class="work-description">
+            <h1><a href="#" class="project-name-link">NAIYA</a></h1>
+            <p>
+              Naiya is a classified ads website.
+
+              <span id="naiya-case_study">Case Study Coming Soon</span>
+            </p>
+          </div>
+        </div>
+        <!-- NAIYA-BOARD -->
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8ff5-56179d35">
+          <a href="#" class="work-image cc-work-3 w-inline-block"></a>
+          <div class="work-description">
+            <h1><a href="#" class="project-name-link">WAKACARRY</a></h1>
+            <p>
+              Wakacarry is a delivery mobile app that does local and
+              internationl deliveries.
+              <span id="naiya-case_study">Case Study Coming Soon</span>
+            </p>
+          </div>
+        </div>
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-56179d35"></div>
+      </div>
+      <div class="container">
+        <div class="carrer-headline-wrap"></div>
+      </div>
+    </div>
+
+    <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <span
+        ><img src="../images/up-arrow copy.png" width="20px" height="20px"
+      /></span>
+    </button> -->
+    <div class="section">
+      <div id="works-grid" class="w-layout-grid works-grid">
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-56179d35">
           <a
             href="work/3rdretailafrica.html"
-            class="work-image cc-work-1 w-inline-block"
+            class="work-image cc-work-5 w-inline-block"
           ></a>
           <div class="work-description">
-            <h1><a href="work/3rdretailafrica.html" class="project-name-link"
-              >3rdretail Africa Redesign<br
-            /></a></h1>
+            <h1>
+              <a href="work/3rdretailafrica.html" class="project-name-link"
+                >3rdretail Africa Redesign<br
+              /></a>
+            </h1>
             <p>
               3rdretail Africa is a B2B marketplace that connects Brand to
               resellers and vise versa.
@@ -148,12 +216,14 @@
         <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-56179d35">
           <a
             href="work/wsm.html"
-            class="work-image cc-work-2 w-inline-block"
+            class="work-image cc-work-6 w-inline-block"
           ></a>
           <div class="work-description">
-            <h1><a href="work/wsm.html" class="project-name-link"
-              >Winners Management System</a
-            ></h1>
+            <h1>
+              <a href="work/wsm.html" class="project-name-link"
+                >Winners Management System</a
+              >
+            </h1>
             <p>
               Winners management system is a simple application designed to help
               a lottory company successfully select sets of winners to be drawn
@@ -161,37 +231,7 @@
             </p>
           </div>
         </div>
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-56179d35">
-          <a
-            href="#"
-            class="work-image cc-work-4 w-inline-block"
-          ></a>
-          <div class="work-description">
-            <h1><a href="#" class="project-name-link"
-              >NAIYA</a
-            ></h1>
-            <p>
-              Naiya is a classified ads website.
-            
-               <span id="naiya-case_study">Case Study Coming Soon</span>
-            </p>
-          </div>
-        </div>
-<!-- NAIYA-BOARD -->
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8ff5-56179d35">
-          <a
-            href="#"
-            class="work-image cc-work-3 w-inline-block"
-          ></a>
-          <div class="work-description">
-            <h1><a href="#" class="project-name-link"
-              >WAKACARRY</a
-            ></h1>
-            <p>
-              Wakacarry is a delivery mobile app that does local and internationl deliveries.  <span id="naiya-case_study">Case Study Coming Soon</span>
-            </p>
-          </div>
-        </div>
+
         <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-56179d35"></div>
       </div>
       <div class="container">
@@ -266,7 +306,6 @@
                   data-wait="Please wait..."
                   class="button w-button"
                 />
-               
               </form>
               <div class="status-message cc-success-message w-form-done">
                 <div>Thank you! Your submission has been received!</div>
