--- a/work/3rdretailafrica.html
+++ b/work/3rdretailafrica.html
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="hero">
+    <div class="hero5">
       <div class="herotext">
         <a href="../index.html" class="link">Back to all projects</a>
         <h1 class="heading-3">3rdretail Africa</h1>
