testing mail service

--- a/index.html
+++ b/index.html
@@ -253,8 +253,11 @@
                 id="wf-form-Email-Form"
                 name="wf-form-Email-Form"
                 data-name="Email Form"
-                method="get"
                 class="contact-form"
+                form
+                action="mailto:someone@example.com"
+                method="post"
+                enctype="text/plain"
               >
                 <div class="w-layout-grid contact-form-grid">
                   <div
