test on email address to live

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 data-name="Email Form"
                 class="contact-form"
                 form
-                action="mailto:someone@example.com"
+                action="mailto:ekwealortobechukwu22@gmail.com"
                 method="post"
                 enctype="text/plain"
               >
