--- a/work/tilotailor.html
+++ b/work/tilotailor.html
@@ -428,7 +428,7 @@
           <h3>Looking for a designer to join your team?</h3>
           <p>Send me an email.</p>
           <a
-            href="mailto:jane@portfolio.com?subject=You&#x27;ve%20got%20mail!"
+            href="mailto:ekwealortobechukwu22@gmail.com?subject=You&#x27;ve%20got%20mail!"
             class="email-link"
             >Ekwealortobechukwu22@gmail.com</a
           >
