--- a/work/wsm.html
+++ b/work/wsm.html
@@ -379,7 +379,7 @@
           <h3>Looking for a designer to join your team?</h3>
           <p>Send me an email</p>
           <a
-            href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!"
+            href="mailto:ekwealortobechukwu22@gmail.com?subject=You&#x27;ve%20got%20mail!"
             class="email-link"
             >ekwealortobechukwu22@gmail.com</a
           >
@@ -413,7 +413,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/webflow.js" type="text/javascript"></script>
-     <script src="../js/scrolltotop.js" type="text/javascript"></script>
+    <script src="../js/scrolltotop.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
