added let's chat

--- a/index.html
+++ b/index.html
@@ -242,13 +242,25 @@
       <div class="container">
         <div class="contact">
           <div class="contact-headline">
-            <h3 class="heading">
-              Looking for a designer to join your team?<br />
+            <img src="/images/lightbulb.png" alt="lightbulb" class="icon-bulb"/>
+            <h3 class="heading contact">
+              Ready to Transform Your Ideas into Stunning Products?<br />
             </h3>
-            <p class="paragraph-light">Send me an Email</p>
+
+            <div class="contact-btn">
+              <a href="https://www.linkedin.com/in/ekwealor-tobechukwu-100113114/">
+                <input
+                type="submit"
+                value="let's Chat"
+                class="button w-button"
+              />
+              </a>
+        
+            </div>
+            <!-- <p class="paragraph-light">Send me an Email</p> -->
           </div>
           <div class="contact-form-wrap">
-            <div class="w-form">
+            <!-- <div class="w-form">
               <form
                 id="wf-form-Email-Form"
                 name="wf-form-Email-Form"
@@ -317,7 +329,7 @@
                 <div>Oops! Something went wrong while submitting the form.</div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
