updated jumbo text

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
           class="intro-wrap"
         >
           <div class="name-text">
-            <span class="text-span-2">I&#x27;m</span>
-            <span class="text-span-3">Ekwealor </span
-            ><span class="text-span">Tobechukwu,</span>
+            <span class="text-span-2">Hey! I&#x27;m</span>
+            <span class="text-span-3">Tobechukwu </span>
+            <!-- <span class="text-span">Tobechukwu,</span> -->
           </div>
           <h1 class="heading-jumbo">
             a product designer that create and design mininmalistic user center
