--- a/index.html
+++ b/index.html
@@ -238,6 +238,51 @@
         <div class="carrer-headline-wrap"></div>
       </div>
     </div>
+
+    <div class="section">
+      <div id="works-grid" class="w-layout-grid works-grid">
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-56179d35">
+          <a
+            href="work/3rdretailafrica.html"
+            class="work-image cc-work-7 w-inline-block"
+          ></a>
+          <div class="work-description">
+            <h1>
+              <a href="#" class="project-name-link"
+                >Monibag<br
+              /></a>
+            </h1>
+            <p>
+             Monibag is a remittance app for Nigerians in diaspora to be able to send money to loved one in Nigeria
+             <span id="naiya-case_study">Case Study Coming Soon</span>
+            </p>
+          </div>
+        </div>
+        <!-- <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-56179d35">
+          <a
+            href="work/wsm.html"
+            class="work-image cc-work-6 w-inline-block"
+          ></a>
+          <div class="work-description">
+            <h1>
+              <a href="work/wsm.html" class="project-name-link"
+                >Winners Management System</a
+              >
+            </h1>
+            <p>
+              Winners management system is a simple application designed to help
+              a lottory company successfully select sets of winners to be drawn
+              for the prize.
+            </p>
+          </div>
+        </div> -->
+
+        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-56179d35"></div>
+      </div>
+      <div class="container">
+        <div class="carrer-headline-wrap"></div>
+      </div>
+    </div>
     <div class="section cc-contact">
       <div class="container">
         <div class="contact">
