--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               /></a>
             </h1>
             <p>
-             Monibag is a remittance app for Nigerians in diaspora to be able to send money to loved one in Nigeria
+             Monibag is a remittance app for Nigerians in diaspora to be able to send money to loved ones in Nigeria
              <span id="naiya-case_study">Case Study Coming Soon</span>
             </p>
           </div>
